# mcp-solana-internet

./: .gitignore  README.md  pyproject.toml  pytest.ini  solana_payment_animation.py
mcp_solana_internet/: .env  README.md  __init__.py  config.py  payments.py  pyproject.toml  server.py  utils.py
mcp_solana_internet/tests/integration/: test_server.py
tests/integration/: test_server.py
